--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 
         <aside class="hero-right card">
           <div class="profile-top">
-            <div class="profile-badge">LS</div>
+            <!--<div class="profile-badge">LS</div>-->
+            <img src="assets/me.jpg" alt="Lehi Smart" class="profile-image">
             <div>
               <div class="profile-name">Lehi Smart</div>
               <div class="profile-sub">2nd year Computer Science — Aberystwyth University</div>
